tests/snapshots/examples_fixtures/diagnostics_demos__errors__Aurora.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/diagnostics_demos/errors/Aurora.flx
== compile ==
failed (compile)
== diagnostics ==
error[E007]: Duplicate Parameter

Duplicate parameter name: `x`.

  examples/diagnostics_demos/errors/Aurora.flx:1:3
  |
1 |   fn echo(x, x) {
  |   ^

Hint:
  Each parameter must have a unique name.
== stdout ==
<not executed>
