tests/snapshots/examples_fixtures/diagnostics_demos__errors__Broken.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/diagnostics_demos/errors/Broken.flx
== compile ==
failed (module)
== diagnostics ==
error[E024]: Module Path Mismatch

Module name `Errors.Broken` doesn't match file path `examples/diagnostics_demos/errors/Broken.flx`.

  examples/diagnostics_demos/errors/Broken.flx:1:1
  |
1 | module Errors.Broken {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
