tests/snapshots/examples_fixtures/diagnostics_demos__errors__Prism.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/diagnostics_demos/errors/Prism.flx
== compile ==
failed (compile)
== diagnostics ==
error[E007]: Duplicate Parameter

Duplicate parameter name: `x`.

  examples/diagnostics_demos/errors/Prism.flx:0:1
  |

Hint:
  Each parameter must have a unique name.
== stdout ==
<not executed>
