tests/snapshots/examples_fixtures/diagnostics_demos__errors__ScriptOnly.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/diagnostics_demos/errors/ScriptOnly.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
