tests/snapshots/examples_fixtures/diagnostics_demos__errors__import_not_found_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/diagnostics_demos/errors/import_not_found_error.flx
== compile ==
failed (module)
== diagnostics ==
error[E018]: Import Not Found

Cannot find module `Missing.Module` to import.

  examples/diagnostics_demos/errors/import_not_found_error.flx:2:1
  |
2 | import Missing.Module
  | ^

Hint:
  Check that: 1) The module file exists (e.g., `Missing.Module.flx`), 2) The file is in a module root directory (current dir or ./src by default), 3) The module path matches the file structure (e.g., `Foo.Bar` → `Foo/Bar.flx`). Use `--root` flag to add more search paths.
  Looked for module `Missing.Module` under roots: examples/diagnostics_demos/errors, src, lib (imported from examples/diagnostics_demos/errors/import_not_found_error.flx).
== stdout ==
<not executed>
