tests/snapshots/examples_fixtures/diagnostics_demos__errors__match_guard_syntax_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/diagnostics_demos/errors/match_guard_syntax_error.flx
== compile ==
failed (parse)
== diagnostics ==
error[E031]: Expected Expression

Expected expression, found `->`.

  examples/diagnostics_demos/errors/match_guard_syntax_error.flx:5:16
  |
5 |     Some(v) if -> v,
  |                ^^

Note:
  while parsing `match` expression


error[E031]: Expected Expression

Expected expression, found `;`.

  examples/diagnostics_demos/errors/match_guard_syntax_error.flx:7:2
  |
7 | };
  |  ^

Found 2 errors.
== stdout ==
<not executed>
